# forth

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: eval.rs  functions.rs  lex.rs  main.rs
