[package]
name = "forth"
version = "0.1.0"
authors = ["Govind Gnanakumar <govind.gnanakumar@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1


[dependencies]
